Routes example added

--- a/cap11/curso_rails/app/views/home/index.html.erb
+++ b/cap11/curso_rails/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<!--Error button-->
+<!--<%= button_to "Enviar", :action => "servicios" %>-->
+<!--Functional button-->
+<%= button_to "Enviar", servicios_path %>
