--- a/cap12/curso_rails/app/views/home/index.html.erb
+++ b/cap12/curso_rails/app/views/home/index.html.erb
@@ -1,2 +1,16 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<h2>Formulario POST</h2>
+<%= form_tag("/home/contacto", :method => :post) do %>
+  <%= label_tag "Nombre" %>
+  <%= text_field_tag "nombre" %>
+  <%= submit_tag "Enviar" %>
+<% end %>
+
+<h2>Formulario GET</h2>
+<%= form_tag("/home/contacto", :method => :get) do %>
+  <%= label_tag "Nombre" %>
+  <%= text_field_tag "nombre" %>
+  <%= submit_tag "Enviar" %>
+<% end %>
